--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,10 +15,10 @@ bind Space next-window
 
 set-option -g base-index 1
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
 
 set-option -g renumber-windows on
 set-window-option -g mode-keys vi
