--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ set-option -g prefix C-t
 bind-key C-t send-prefix 
 unbind-key C-b
 
+set-option -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
 set-option -g status-position top
 
 set -g status-right ''
@@ -15,10 +17,11 @@ bind Space next-window
 
 set-option -g base-index 1
 
-#setw -g mode-mouse on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-#set -g mouse-select-window on
+# Invalid mouse setting in Teaminal.app
+set-window-option -g mode-mouse on
+set-window-option -g mouse-select-pane on
+set-window-option -g mouse-resize-pane on
+set-window-option -g mouse-select-pane on
 
 set-option -g renumber-windows on
 set-window-option -g mode-keys vi
