Tmux for Iterm2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set-option -g status-position top
 set -g status-right ''
 
 # Decrease delay of keystroke 
-set -sg escape-time 1
+set -sg escape-time 0
 bind | split-window -h
 bind - split-window -v
 
@@ -17,11 +17,10 @@ bind Space next-window
 
 set-option -g base-index 1
 
-# Invalid mouse setting in Teaminal.app
+# If moude-mouse on, copy need to opt key
 set-window-option -g mode-mouse on
 set-window-option -g mouse-select-pane on
 set-window-option -g mouse-resize-pane on
-set-window-option -g mouse-select-pane on
 
 set-option -g renumber-windows on
 set-window-option -g mode-keys vi
