--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,7 @@ set-option -g base-index 1
 # If moude-mouse on, copy need to opt key
 set-window-option -g mode-mouse on
 set-window-option -g mouse-select-pane on
+set-window-option -g mouse-select-window on
 set-window-option -g mouse-resize-pane on
 
 set-option -g renumber-windows on
