--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,8 @@
   excludesfile = ~/.gitignore_global
   editor = vim
   autocrlf = input
+  quotepath = false
+  precomposeunicode = true
 [color]
   ui = auto
   status = auto
@@ -69,3 +71,11 @@
   # logをtree表示
   log-graph = log --graph --date=short --pretty=format:'%Cgreen%h %cd %Cblue%cn %Creset%s'
   log-all = log --graph --all --color --pretty='%x09%h %cn%x09%s %Cred%d%Creset'
+[url "https://"]
+	insteadOf = git://
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /opt/homebrew-cask/Caskroom/sourcetree/2.0.3/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
